<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashBoard_Option.DashboardActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:src="@drawable/background_nav_header"
        android:contentDescription="@string/help_header"/>

    <androidx.cardview.widget.CardView
        android:layout_width="359dp"
        android:layout_height="124dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:foregroundGravity="center_horizontal"
        android:background="@drawable/search_card">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/help_search"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/purple"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="64dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <EditText
                android:id="@+id/searchInput"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/help_search_placeholder"
                android:inputType="text"
                android:padding="8dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                android:src="@drawable/search_icon" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewItem"
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".DashBoard_Option.DashboardActivity"
        tools:showIn="@layout/fragment_help" />

</RelativeLayout>
