<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:animateLayoutChanges="true">

    <!-- Timer Input Container -->
    <LinearLayout
        android:id="@+id/linearLayout_timer_input_number_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp">

        <!-- Hours NumberPicker -->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Hours"
                android:textSize="16sp"
                android:textColor="@android:color/white" />

            <NumberPicker
                android:id="@+id/number_picker_hours"
                android:layout_width="47dp"

                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />
        </FrameLayout>

        <!-- Separator -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="50sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center_vertical" />

        <!-- Minutes NumberPicker -->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Minutes"
                android:textSize="16sp"
                android:textColor="@android:color/white" />

            <NumberPicker
                android:id="@+id/number_picker_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />
        </FrameLayout>

        <!-- Separator -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="50sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center_vertical" />

        <!-- Seconds NumberPicker -->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Seconds"
                android:textSize="16sp"
                android:textColor="@android:color/white" />

            <NumberPicker
                android:id="@+id/number_picker_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />
        </FrameLayout>
    </LinearLayout>

    <!-- Timer Message Container -->
    <LinearLayout
        android:id="@+id/linearLayout_timer_message_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_timer_input_number_container"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeIsUP"
            android:textSize="24sp"
            android:textColor="@android:color/holo_red_light"
            android:gravity="center" />
    </LinearLayout>

    <!-- Timer Control Buttons -->
    <LinearLayout
        android:id="@+id/linearLayout_timer_container"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp">
        <Button
            android:id="@+id/button_start_timer"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/start"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_dark" />
        <Button
            android:id="@+id/button_stop_timer"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/stop"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_dark" />
        <Button
            android:id="@+id/button_resume_timer"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/resume"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_orange_dark" />
        <Button
            android:id="@+id/button_reset_timer"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/reset"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_green_dark" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
